Copy over updated build and webpack configs from js13k-webpack-starter

--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "js13k-setup",
-  "private": true,
+  "name": "js13kgames_2019_doggos",
+  "version": "1.0.0",
+  "description": "",
+  "main": "postbuild.js",
   "scripts": {
-    "start": "webpack-dev-server --progress",
-    "build": "webpack -p --progress",
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "postbuild": "node postbuild.js"
   },
-  "devDependencies": {
-    "archiver": "^2.0.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-inline-source-plugin": "^0.0.9",
-    "html-webpack-plugin": "^2.29.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mccordgh/js13kgames_2019_doggos.git"
   },
-  "dependencies": {
-    "compression-webpack-plugin": "^2.0.0"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mccordgh/js13kgames_2019_doggos/issues"
+  },
+  "homepage": "https://github.com/mccordgh/js13kgames_2019_doggos#readme",
+  "devDependencies": {
+    "archiver": "^2.1.1",
+    "css-loader": "^1.0.0",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
