--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/mccordgh/js13kgames_2019_doggos#readme",
   "devDependencies": {
     "archiver": "^2.1.1",
+    "compression-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^1.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
